--- a/sass/partials/_checkout-columns.scss
+++ b/sass/partials/_checkout-columns.scss
@@ -46,6 +46,10 @@ body:not( .has-checkout-must-login-notice ):not( .has-fc-sidebar ) .fc-inside {
 .fc-sidebar {
 	position: static;
 
+	@media (#{$bp-larger-than-tablet}) and (#{$bp-smaller-than-desktop}) {
+		margin-top: $global-spacing-small;
+	}
+
 	@media (#{$bp-larger-than-desktop}) {
 		z-index: z( 'default' ) + 1;
 		float: $alignment-right;
